--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1,32 +1,6 @@
 - id: '1670145489984'
   name: werkdag
   entities:
-    light.computerlamp:
-      min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      color_mode: color_temp
-      brightness: 255
-      color_temp_kelvin: 4926
-      color_temp: 203
-      hs_color:
-      - 26.931
-      - 20.257
-      rgb_color:
-      - 255
-      - 226
-      - 203
-      xy_color:
-      - 0.375
-      - 0.35
-      friendly_name: Computerlamp
-      supported_features: 0
-      state: 'on'
     cover.rollerblind_0001:
       current_position: 40
       device_class: shade
@@ -39,6 +13,32 @@
       friendly_name: RollerBlind 0002
       supported_features: 15
       state: open
+    light.tafellamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - color_temp
+      - hs
+      color_mode: color_temp
+      brightness: 145
+      color_temp_kelvin: 3003
+      color_temp: 333
+      hs_color:
+      - 27.82
+      - 56.814
+      rgb_color:
+      - 255
+      - 177
+      - 110
+      xy_color:
+      - 0.496
+      - 0.383
+      icon: mdi:spotlight-beam
+      friendly_name: Tafellamp
+      supported_features: 0
+      state: 'on'
   icon: mdi:desktop-classic
   metadata: {}
 - id: '1675973399117'
@@ -54,8 +54,11 @@
       supported_color_modes:
       - color_temp
       - xy
+      effect:
       color_mode: xy
       brightness: 128
+      color_temp_kelvin:
+      color_temp:
       hs_color:
       - 44.722
       - 84.706
@@ -71,141 +74,269 @@
       friendly_name: LED-Bank level, light_color, on_off
       supported_features: 44
       state: 'on'
-    light.ikea_of_sweden_tradfri_bulb_gu10_cws_345lm_1339b7fe_level_light_color_on_off:
-      min_color_temp_kelvin: 2202
-      max_color_temp_kelvin: 4000
-      min_mireds: 250
-      max_mireds: 454
-      effect_list:
-      - colorloop
-      supported_color_modes:
-      - color_temp
-      - xy
-      off_with_transition: false
-      off_brightness:
-      friendly_name: backlight
-      supported_features: 44
-      color_mode: xy
-      brightness: 178
-      hs_color:
-      - 44.793
-      - 85.098
-      rgb_color:
-      - 255
-      - 200
-      - 38
-      xy_color:
-      - 0.509
-      - 0.451
-      state: 'on'
-    light.staanderaamlamp_level_light_color_on_off:
-      min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - color_temp
-      - xy
-      off_with_transition: false
-      off_brightness: 3
-      friendly_name: StaandeRaamLamp level, light_color, on_off
-      supported_features: 40
-      state: 'off'
     light.tv_lamp:
       min_color_temp_kelvin: 2000
       max_color_temp_kelvin: 6535
       min_mireds: 153
       max_mireds: 500
       supported_color_modes:
-      - brightness
       - color_temp
       - hs
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
       icon: mdi:ceiling-light
       friendly_name: TV lamp
       supported_features: 0
       state: 'off'
-    light.computerlamp:
+    cover.gordijnen:
+      current_position: 0
+      entity_id:
+      - cover.rollerblind_0001
+      - cover.rollerblind_0002
+      device_class: blind
+      friendly_name: Gordijnen
+      supported_features: 15
+      state: closed
+    light.schilderijenspot:
       min_color_temp_kelvin: 2000
       max_color_temp_kelvin: 6535
       min_mireds: 153
       max_mireds: 500
+      effect_list:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
       supported_color_modes:
-      - brightness
       - color_temp
-      - hs
-      friendly_name: Computerlamp
-      supported_features: 0
+      effect:
+      color_mode: color_temp
+      brightness: 102
+      color_temp_kelvin: 2000
+      color_temp: 500
+      hs_color:
+      - 30.601
+      - 94.547
+      rgb_color:
+      - 255
+      - 136
+      - 13
+      xy_color:
+      - 0.599
+      - 0.382
+      friendly_name: schilderijenspot
+      supported_features: 44
+      state: 'on'
+    switch.schilderijenspot_do_not_disturb:
+      friendly_name: schilderijenspot Do not disturb
       state: 'off'
+    light.boekenkastspot:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      supported_color_modes:
+      - color_temp
+      effect:
+      color_mode: color_temp
+      brightness: 102
+      color_temp_kelvin: 2000
+      color_temp: 500
+      hs_color:
+      - 30.601
+      - 94.547
+      rgb_color:
+      - 255
+      - 136
+      - 13
+      xy_color:
+      - 0.599
+      - 0.382
+      friendly_name: boekenkastspot
+      supported_features: 44
+      state: 'on'
+    select.boekenkastspot_effect:
+      options:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      assumed_state: true
+      icon: mdi:palette
+      friendly_name: boekenkastspot Effect
+      state: unknown
+    switch.boekenkastspot_do_not_disturb:
+      friendly_name: boekenkastspot Do not disturb
+      state: 'off'
+    light.tafelspot:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      supported_color_modes:
+      - color_temp
+      effect:
+      color_mode: color_temp
+      brightness: 161
+      color_temp_kelvin: 2000
+      color_temp: 500
+      hs_color:
+      - 30.601
+      - 94.547
+      rgb_color:
+      - 255
+      - 136
+      - 13
+      xy_color:
+      - 0.599
+      - 0.382
+      friendly_name: tafelspot
+      supported_features: 44
+      state: 'on'
+    switch.tafelspot_do_not_disturb:
+      friendly_name: tafelspot Do not disturb
+      state: 'off'
+    light.tvbacklight:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      supported_color_modes:
+      - color_temp
+      - xy
+      effect:
+      color_mode: color_temp
+      brightness: 168
+      color_temp_kelvin: 2702
+      color_temp: 370
+      hs_color:
+      - 28.391
+      - 65.659
+      rgb_color:
+      - 255
+      - 166
+      - 87
+      xy_color:
+      - 0.526
+      - 0.387
+      friendly_name: TVBacklight
+      supported_features: 44
+      state: 'on'
+    select.tvbacklight_effect:
+      options:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      assumed_state: true
+      icon: mdi:palette
+      friendly_name: TVBacklight Effect
+      state: unknown
+    remote.google_tv:
+      activity_list:
+      current_activity: com.google.android.apps.tv.launcherx
+      friendly_name: Google TV
+      supported_features: 4
+      state: 'on'
+    media_player.google_tv:
+      assumed_state: true
+      device_class: tv
+      friendly_name: Google TV
+      supported_features: 22457
+      app_id: com.google.android.apps.tv.launcherx
+      app_name: com.google.android.apps.tv.launcherx
+      state: 'on'
+    light.staande_lamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      supported_color_modes:
+      - color_temp
+      effect:
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      friendly_name: staande lamp
+      supported_features: 44
+      state: 'off'
+    select.staande_lamp_effect:
+      options:
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
+      assumed_state: true
+      icon: mdi:palette
+      friendly_name: staande lamp Effect
+      state: unknown
+    switch.staande_lamp_do_not_disturb:
+      friendly_name: staande lamp Do not disturb
+      state: 'on'
     light.tafellamp:
       min_color_temp_kelvin: 2000
       max_color_temp_kelvin: 6535
       min_mireds: 153
       max_mireds: 500
       supported_color_modes:
-      - brightness
       - color_temp
       - hs
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
       icon: mdi:spotlight-beam
       friendly_name: Tafellamp
       supported_features: 0
       state: 'off'
-    light.boekenlamp:
-      min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      friendly_name: Boekenlamp
-      supported_features: 0
-      color_mode: hs
-      brightness: 64
-      hs_color:
-      - 45.125
-      - 85.827
-      rgb_color:
-      - 255
-      - 200
-      - 36
-      xy_color:
-      - 0.509
-      - 0.451
-      state: 'on'
-    light.muurlamp:
-      min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      friendly_name: Muurlamp
-      supported_features: 0
-      color_mode: hs
-      brightness: 64
-      hs_color:
-      - 45.125
-      - 85.827
-      rgb_color:
-      - 255
-      - 200
-      - 36
-      xy_color:
-      - 0.509
-      - 0.451
-      state: 'on'
-    cover.gordijnen:
-      friendly_name: Gordijnen
-      supported_features: 15
-      current_position: 0
-      entity_id:
-      - cover.rollerblind_0001
-      - cover.rollerblind_0002
-      device_class: blind
-      state: closed
   icon: mdi:video-vintage
   metadata:
     cover.gordijnen:
